--- a/debian/etc/systemd/system/energomera-exporter.service
+++ b/debian/etc/systemd/system/energomera-exporter.service
@@ -7,7 +7,7 @@ Restart=always
 User=root
 EnvironmentFile=/etc/default/energomera-exporter
 ExecStart=/usr/bin/energomera-exporter $ARGS
-RestartSec=10
+RestartSec=10s
 
 [Install]
 WantedBy=multi-user.target
